usuario update - salvar atualização
-Verificações mais robustas, mas ainda incompleto;
-Possível realizar o update das informações básicas de um usuário com com endereço.
-correção bug ao pegar endereço ( não estava puxando o número e o complemento).

--- a/Main.java/src/view/UsuarioPanel.form
+++ b/Main.java/src/view/UsuarioPanel.form
@@ -232,7 +232,7 @@
     </Container>
     <Component class="javax.swing.JButton" name="BotaoAtualizarUsuario">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Atualizar"/>
+        <Property name="text" type="java.lang.String" value="Modificar"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoAtualizarUsuarioActionPerformed"/>
