--- a/Main.java/src/view/AtualizarUsuarioView.form
+++ b/Main.java/src/view/AtualizarUsuarioView.form
@@ -246,12 +246,12 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="12" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Dados de identifica&#xe7;&#xe3;o:"/>
+        <Property name="text" type="java.lang.String" value="Dados de identifica&#xe7;&#xe3;o"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Nome completo:"/>
+        <Property name="text" type="java.lang.String" value="Nome completo"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="CampoTextoNome">
@@ -263,7 +263,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="CPF:"/>
+        <Property name="text" type="java.lang.String" value="CPF"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="CampoTextoTelefone">
@@ -273,7 +273,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Telefone:"/>
+        <Property name="text" type="java.lang.String" value="Telefone"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
@@ -293,12 +293,12 @@
     </Container>
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Observa&#xe7;&#xe3;o(&#xf5;es):"/>
+        <Property name="text" type="java.lang.String" value="Observa&#xe7;&#xe3;o(&#xf5;es)"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="RadioButtonSenha">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Senha:"/>
+        <Property name="text" type="java.lang.String" value="Senha"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="RadioButtonSenhaActionPerformed"/>
@@ -306,17 +306,17 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Senha:"/>
+        <Property name="text" type="java.lang.String" value="Senha"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Confirmar Senha:"/>
+        <Property name="text" type="java.lang.String" value="Confirmar Senha"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel10">
       <Properties>
-        <Property name="text" type="java.lang.String" value="CEP:"/>
+        <Property name="text" type="java.lang.String" value="CEP"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="CampoTextoCEP">
@@ -346,7 +346,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel11">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Estado:"/>
+        <Property name="text" type="java.lang.String" value="Estado"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="ComboBoxUF">
@@ -362,7 +362,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel12">
       <Properties>
-        <Property name="text" type="java.lang.String" value="UF:"/>
+        <Property name="text" type="java.lang.String" value="UF"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="ComboBoxCidade">
@@ -378,12 +378,12 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel13">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Cidade:"/>
+        <Property name="text" type="java.lang.String" value="Cidade"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel15">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Logradouro:"/>
+        <Property name="text" type="java.lang.String" value="Logradouro"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="ComboBoxLogradouro">
@@ -398,14 +398,14 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel16">
       <Properties>
-        <Property name="text" type="java.lang.String" value="N&#xfa;mero:"/>
+        <Property name="text" type="java.lang.String" value="N&#xfa;mero"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="CampoTextoComplemento">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel17">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Complemento:"/>
+        <Property name="text" type="java.lang.String" value="Complemento"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="BotaoSalvarAlteracao">
@@ -442,7 +442,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel14">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Bairro:"/>
+        <Property name="text" type="java.lang.String" value="Bairro"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JCheckBox" name="CheckBoxEndereco">
