update cliente e formatação de campos
-Update cliente funcionando;
-Formatação de campos no AtualizarCliente e VendaPane;

--- a/Main.java/src/view/AtualizarClienteView.form
+++ b/Main.java/src/view/AtualizarClienteView.form
@@ -41,7 +41,7 @@
                                                   <Group type="102" attributes="0">
                                                       <Component id="jScrollPane2" min="-2" pref="79" max="-2" attributes="0"/>
                                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                      <Component id="jButton1" min="-2" pref="25" max="-2" attributes="0"/>
+                                                      <Component id="btPesquisarEndereco" min="-2" pref="25" max="-2" attributes="0"/>
                                                   </Group>
                                                   <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                                               </Group>
@@ -176,7 +176,7 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btPesquisarEndereco" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="cbEstado" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="cbUF" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="cbCidade" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -224,6 +224,10 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txNome">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
@@ -236,6 +240,10 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txCPF">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
@@ -243,6 +251,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txTelefone">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txTelefoneKeyTyped"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
@@ -272,6 +283,9 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Component class="javax.swing.JTextPane" name="txCEP">
+          <Events>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txCEPKeyTyped"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -280,7 +294,7 @@
         <Property name="text" type="java.lang.String" value="CEP"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="btPesquisarEndereco">
       <Properties>
         <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
@@ -399,11 +413,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Salvar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btSalvarAlteracaoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btDesfazerAlteracao">
       <Properties>
         <Property name="text" type="java.lang.String" value="Desfazer Altera&#xe7;&#xf5;es"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btDesfazerAlteracaoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JCheckBox" name="checkEndereco">
       <Properties>
