update - fix bugs gerais;
-Atualização de tabelas em real time;
-Alguns bugs ao pesquisar solucionado;
-Arrumado bug que não poder cadastrar usuário sem endereço;

--- a/Main.java/src/view/HistoricoPane.form
+++ b/Main.java/src/view/HistoricoPane.form
@@ -171,6 +171,7 @@
     <Component class="javax.swing.JTextField" name="CampoTextoPesquisaCliente">
       <Events>
         <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CampoTextoPesquisaClienteKeyReleased"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CampoTextoPesquisaClienteKeyTyped"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
